--- a/Sionna_Ray_Tracing_Introduction copy 5.ipynb
+++ b/Sionna_Ray_Tracing_Introduction copy 5.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
-      "Found 1 GPUs\n",
-      "Found GPU: /physical_device:GPU:0\n",
-      "Physical devices cannot be modified after being initialized\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Jason's implementation of directional algo\n",
     "from algorithim import Params, Algorithm, Capon\n",
@@ -88,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1970,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sionna",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1995,7 +1984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
